.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Comp_Benefit_Review_Summary_Other_Filter__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Filters compensation, benefits and review summary records for Non Admin profiles. Display options as Admin</description>
    <fields>
        <fullName>xcdhcm__Display_option__c</fullName>
        <description>The compensation,benefit and review records are filtered based on display option configured.</description>
        <inlineHelpText>Configure one of the following as Display option , 
All records,Last 3 years,Last 2 years,Last 12 months,Current year,Current + previous years,Current + 2 previous years,Current record only.</inlineHelpText>
        <label>Display option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Other_Filter_Permission_Sets__c</fullName>
        <label>Other Filter:Permission Sets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Other_Filter_Profiles__c</fullName>
        <label>Other Filter:Profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Comp_Benefit_Review_Summary_Other_Filter</label>
</CustomObject>